# MiroFish

./: .env.example  .gitignore  README-EN.md  README.md  docker-compose.yml  package.json
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py
backend/app/api/: simulation.py
backend/app/services/: oasis_profile_generator.py  simulation_runner.py  zep_graph_memory_updater.py  zep_tools.py
backend/scripts/: run_parallel_simulation.py
frontend/: Dockerfile  nginx.conf
frontend/src/api/: simulation.js
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/router/: index.js
frontend/src/views/: SimulationRunView.vue
